# _mdetr

./: constraints.txt  main.py  pyproject.toml  requirements.txt
src/mdetr/: hubconf.py
src/mdetr/datasets/: __init__.py  clevr.py  clevrref.py  coco.py  lvis_eval.py  lvis_modulation.py  phrasecut.py  refexp.py
src/mdetr/datasets/phrasecut_utils/: refvg_loader.py
src/mdetr/models/: backbone.py  mdetr.py  segmentation.py  transformer.py
src/mdetr/scripts/: eval_clevr.py  eval_gqa.py  eval_lvis.py
src/mdetr/scripts/fine_tuning/: subsample_lvis.py
src/mdetr/scripts/utils/: spans.py
