[project]
name = "mdetr"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
version = "0.0.1"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

include = ["mdetr*"]
